@@ -367,6 +367,15 @@ This disease has no bad consequences except for being annoying and infectuous. \
 It is caught by being smiled at by an attractive member of the opposite sex. It \
 is spread by proximity to the infected.
 
+SLEEPWALKING=DISEASE_SLEEPWALKING
+DISEASE_SLEEPWALKING=\
+Disease    : Sleepwalking\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+This disease causes people to walk around in their sleep.  It is not infectious and has \
+no other effects.
+
 SYPHILIS=DISEASE_SYPHILIS
 DISEASE_SYPHILIS=\
 Disease    : Syphilis\n\r\
