@@ -5,6 +5,7 @@
    4. New Account stats for Bonus char per account, chars online, char creation points, common skill limits
    5. New Property: Prop_ItemBinder, for binding items to char, acct, clan. How did that get missed all these years?
    6. New version of Siplet (the web client).  Now uses WebSockets for streaming joy.
+   7. New disease: Sleepwalking.  Very rare, but can be caught through extreme fatigue.
 # Build 5.9.0 Released 12/20/2015
    1. Web Server upgraded to 2.3
    2. coffeemud.ini entry FLEE has new (blank) option to basically disable fleeing and break a bunch of skills.
